# coflow

./: .gitignore  0-整体设计.md  1-类型系统.md  10-错误处理.md  2-控制流语法.md  3-基础语法.md  4-函数语法.md  5-协程语法.md  6-模块语法.md  7-class与配置校验.md  8-表达式与运算符.md  9-语法总览.md  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  RELEASE_NOTES.md  temp.md  问题.md
crates/coflow-api/: Cargo.toml
crates/coflow-api/src/: artifacts.rs  codegen.rs  data_output.rs  diagnostics.rs  export.rs  lib.rs  loader_generation.rs  operations.rs  provider.rs  registry.rs  table.rs  writer.rs
crates/coflow-api/tests/: cell_value.rs  exporter_core.rs  provider_options.rs  table_loader.rs
crates/coflow-builtins/: Cargo.toml
crates/coflow-builtins/src/: lib.rs
crates/coflow-cell-value/: Cargo.toml
crates/coflow-cell-value/src/: lib.rs
crates/coflow-cell-value/tests/: cell_value.rs
crates/coflow-cfd/: Cargo.toml
crates/coflow-cfd/src/: ast.rs  lib.rs  parser.rs
crates/coflow-cfd/tests/: cfd_loader.rs  parser.rs
crates/coflow-cft/: Cargo.toml
crates/coflow-cft-cli/: Cargo.toml
crates/coflow-cft-cli/src/: main.rs
crates/coflow-cft-lsp/: Cargo.toml
crates/coflow-cft-lsp/src/: lib.rs
crates/coflow-cft/src/: ast.rs  build.rs  cft_schema.rs  compiled.rs  compiled_schema.rs  container.rs  dimensions.rs  error.rs  identifier.rs  lexer.rs  lib.rs  module_set.rs  names.rs  parser.rs  schema.rs  schema_view.rs
crates/coflow-cft/tests/: annotations.rs  api.rs  error_coverage.rs  names.rs  new_annotations.rs  parser_budget.rs  parser_precedence.rs  record_refs.rs  ref_type.rs  schema.rs  schema_api.rs  schema_budget.rs  syntax.rs  type_checker.rs
crates/coflow-checker/: Cargo.toml
crates/coflow-checker/src/: check.rs  dependencies.rs  dimensions.rs  lib.rs  output.rs  request.rs  schema_view.rs  snapshot.rs
crates/coflow-checker/tests/: budgets.rs  check.rs  error_coverage.rs  multi_language.rs
crates/coflow-codegen-csharp/: Cargo.toml
crates/coflow-codegen-csharp-json/: Cargo.toml
crates/coflow-codegen-csharp-json/src/: lib.rs
crates/coflow-codegen-csharp-json/templates/: database_json.cs.tera  database_json_loaders.cs.tera  database_json_readers.cs.tera
crates/coflow-codegen-csharp/src/: emit.rs  ir.rs  lib.rs  lowering.rs  model.rs  names.rs  render.rs  schema_context.rs  schema_view.rs  tests.rs
crates/coflow-codegen-csharp/templates/: database.cs.tera  database_common_indexes.cs.tera  database_common_members.cs.tera  database_common_resolve.cs.tera  database_json_loaders.cs.tera  database_loader_members.cs.tera  database_messagepack.cs.tera  database_messagepack_loaders.cs.tera  database_messagepack_readers.cs.tera  enum.cs.tera  load_exception.cs.tera  localized.cs.tera  type.cs.tera  type_json_loader.cs.tera  type_json_loader_file.cs.tera  type_json_polymorphic_loader.cs.tera  type_messagepack_loader.cs.tera  type_messagepack_loader_file.cs.tera  type_messagepack_polymorphic_loader.cs.tera
crates/coflow-data-model/: Cargo.toml
crates/coflow-data-model/benches/: schema_relationships.rs
crates/coflow-data-model/src/: compiler.rs  compiler_context.rs  diagnostic.rs  edge_index.rs  lib.rs  model.rs  origin.rs  schema_view.rs  serde_i64.rs  value_semantics.rs
crates/coflow-data-model/tests/: budgets.rs  cell_value.rs  cfd_value_pure_serde.rs  edge_cases.rs  model.rs  phase3_refs.rs  record_keys.rs  value_semantics.rs
crates/coflow-editor-core/: Cargo.toml
crates/coflow-editor-core/bindings/: DiagnosticItem.ts  DictEntry.ts  DictKey.ts  FieldCell.ts  FieldPathSegment.ts  FieldSchema.ts  FieldValue.ts  FileRecords.ts  FileTreeNode.ts  GraphEdge.ts  GraphNode.ts  IncomingRef.ts  ProjectSnapshot.ts  RecordBrief.ts  RecordRow.ts  SearchHit.ts  SpreadSource.ts
crates/coflow-editor-core/src/: commands.rs  convert.rs  lib.rs  patch.rs  session.rs  types.rs
crates/coflow-editor-core/tests/: load_example.rs
crates/coflow-engine/: Cargo.toml
crates/coflow-engine/src/: data_files.rs  data_patch.rs  data_read.rs  files.rs  indexes.rs  lib.rs  load.rs  mutation.rs  records.rs  schema_build.rs  schema_inspect.rs  session.rs  session_build.rs  write_rules.rs  writes.rs
crates/coflow-engine/tests/: data_patch.rs  data_read.rs  dimensions.rs  localization.rs  schema_inspect.rs
crates/coflow-excel-loader/: Cargo.toml
crates/coflow-excel-loader/src/: lib.rs
crates/coflow-excel-loader/tests/: excel_loader.rs
crates/coflow-exporter-core/: Cargo.toml
crates/coflow-exporter-core/src/: lib.rs
crates/coflow-exporter-core/tests/: exporter_core.rs
crates/coflow-exporter-json/: Cargo.toml
crates/coflow-exporter-json/src/: lib.rs
crates/coflow-exporter-json/tests/: json_export.rs
crates/coflow-exporter-messagepack/: Cargo.toml
crates/coflow-exporter-messagepack/src/: lib.rs
crates/coflow-exporter-messagepack/tests/: messagepack_export.rs
crates/coflow-json-export/: Cargo.toml
crates/coflow-json-export/src/: lib.rs
crates/coflow-json-export/tests/: json_export.rs
crates/coflow-loader-cfd/: Cargo.toml
crates/coflow-loader-cfd/src/: diagnostics.rs  lib.rs  lower.rs  options.rs  parser.rs  writer.rs
crates/coflow-loader-cfd/tests/: cfd_loader.rs  cfd_writer.rs
crates/coflow-loader-csv/: Cargo.toml
crates/coflow-loader-csv/src/: diagnostics.rs  format.rs  lib.rs  options.rs  source.rs  writer.rs
crates/coflow-loader-csv/tests/: csv_loader.rs  table_conformance.rs
crates/coflow-loader-excel/: Cargo.toml
crates/coflow-loader-excel/src/: diagnostics.rs  lib.rs  options.rs  source.rs  writer.rs
crates/coflow-loader-excel/tests/: error_coverage.rs  excel_loader.rs  excel_writer.rs  table_conformance.rs
crates/coflow-loader-lark/: Cargo.toml
crates/coflow-loader-lark/src/: diagnostics.rs  dto.rs  http.rs  lib.rs  load.rs  remote.rs  source.rs  write.rs  (+3 more)
crates/coflow-loader-table/: Cargo.toml
crates/coflow-loader-table-core/: Cargo.toml
crates/coflow-lsp/: Cargo.toml
crates/coflow-pipeline/: Cargo.toml
crates/coflow-project/: Cargo.toml
crates/coflow-runtime/: Cargo.toml
editors/cfd-editor/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
(+1182 files in other folders)
