[package]
name = "coflow"
version = "0.1.0"
edition = "2021"
description = "Project-level command-line tools for Coflow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[lints]
workspace = true

[workspace]
members = [
    "crates/coflow-api",
    "crates/coflow-cft",
    "crates/coflow-cfd",
    "crates/coflow-loader-cfd",
    "crates/coflow-data-model",
    "crates/coflow-cell-value",
    "crates/coflow-checker",
    "crates/coflow-loader-excel",
    "crates/coflow-loader-lark",
    "crates/coflow-exporter-json",
    "crates/coflow-exporter-messagepack",
    "crates/coflow-codegen-csharp",
    "crates/coflow-project",
    "crates/coflow-pipeline",
    "crates/coflow-lsp",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
dbg_macro = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
coflow-api = { path = "crates/coflow-api" }
coflow-cft = { path = "crates/coflow-cft" }
coflow-codegen-csharp = { path = "crates/coflow-codegen-csharp" }
coflow-exporter-json = { path = "crates/coflow-exporter-json" }
coflow-exporter-messagepack = { path = "crates/coflow-exporter-messagepack" }
coflow-loader-cfd = { path = "crates/coflow-loader-cfd" }
coflow-loader-excel = { path = "crates/coflow-loader-excel" }
coflow-loader-lark = { path = "crates/coflow-loader-lark" }
coflow-lsp = { path = "crates/coflow-lsp" }
coflow-pipeline = { path = "crates/coflow-pipeline" }
coflow-project = { path = "crates/coflow-project" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
rust_xlsxwriter = "0.95"
