[package]
name = "coflow"
version = "0.5.0"
edition = "2021"
description = "Project-level command-line tools for Coflow."
license = "Apache-2.0"
repository = "https://github.com/Puring103/coflow"
publish = false

[lints]
workspace = true

[workspace]
members = [
    "crates/coflow-api",
    "crates/coflow-cft",
    "crates/coflow-cfd",
    "crates/coflow-builtins",
    "crates/coflow-loader-cfd",
    "crates/coflow-data-model",
    "crates/coflow-checker",
    "crates/coflow-runtime",
    "crates/coflow-loader-table-core",
    "crates/coflow-loader-csv",
    "crates/coflow-loader-excel",
    "crates/coflow-loader-lark",
    "crates/coflow-exporter-json",
    "crates/coflow-exporter-core",
    "crates/coflow-exporter-messagepack",
    "crates/coflow-codegen-csharp",
    "crates/coflow-project",
    "crates/coflow-lsp",
    "crates/coflow-structure",
    "editors/cfd-editor/src-tauri",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
dbg_macro = "warn"
redundant_pub_crate = "allow"

[dependencies]
atomicwrites = "0.4.4"
clap = { version = "4", features = ["derive"] }
coflow-api = { path = "crates/coflow-api" }
coflow-builtins = { path = "crates/coflow-builtins" }
coflow-cft = { path = "crates/coflow-cft" }
coflow-data-model = { path = "crates/coflow-data-model" }
coflow-loader-table-core = { path = "crates/coflow-loader-table-core" }
coflow-lsp = { path = "crates/coflow-lsp" }
coflow-project = { path = "crates/coflow-project" }
coflow-runtime = { path = "crates/coflow-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
coflow-codegen-csharp = { path = "crates/coflow-codegen-csharp" }
coflow-exporter-json = { path = "crates/coflow-exporter-json" }
coflow-loader-csv = { path = "crates/coflow-loader-csv" }
coflow-loader-excel = { path = "crates/coflow-loader-excel" }
calamine = "0.35"
rust_xlsxwriter = "0.95"
toml = "0.9"
