[package]
name = "coflow-api"
version = "0.7.4"
edition = "2021"
description = "Public provider API for Coflow loaders, exporters, and code generators."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "game-data", "api"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[features]
default = []
ts-export = ["dep:ts-rs", "coflow-data-model/ts-export"]

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ts-rs = { version = "10", optional = true }
