[package]
name = "coflow-builtins"
version = "0.5.0"
edition = "2021"
description = "Default provider registry for Coflow hosts."
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-codegen-csharp = { path = "../coflow-codegen-csharp" }
coflow-exporter-json = { path = "../coflow-exporter-json" }
coflow-exporter-messagepack = { path = "../coflow-exporter-messagepack" }
coflow-loader-cfd = { path = "../coflow-loader-cfd" }
coflow-loader-csv = { path = "../coflow-loader-csv" }
coflow-loader-excel = { path = "../coflow-loader-excel" }
coflow-loader-lark = { path = "../coflow-loader-lark" }
