[package]
name = "coflow-cfd"
version = "0.7.4"
edition = "2021"
description = "CFD language syntax parser for Coflow."
license = "Apache-2.0"
repository = "https://github.com/Puring103/coflow"
publish = false

[lints]
workspace = true

[dependencies]
coflow-structure = { path = "../coflow-structure" }
