[package]
name = "coflow-cft-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tools for Coflow CFT schemas."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
coflow-cft = { path = "../coflow-cft" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
