[package]
name = "coflow-cft"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the CFT type definition language for Coflow."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "parser", "game-data", "cft"]
categories = ["config", "parser-implementations", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
regex = "1"
unicode-ident = "1"
