[package]
name = "coflow-cft"
version = "0.6.1"
edition = "2021"
description = "A Rust implementation of the CFT type definition language for Coflow."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "parser", "game-data", "cft"]
categories = ["config", "parser-implementations", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-structure = { path = "../coflow-structure" }
regex = "1"
unicode-ident = "1"
