[package]
name = "coflow-checker"
version = "0.6.1"
edition = "2021"
description = "Runtime CFT check execution for Coflow data models."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "game-data", "checker"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
coflow-structure = { path = "../coflow-structure" }
regex = "1"
