[package]
name = "coflow-codegen-csharp"
version = "0.1.0"
edition = "2021"
description = "Shared C# runtime code generator core for Coflow data formats."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
keywords = ["config", "game-data", "codegen", "csharp"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tera = "1"
unicode-ident = "1"
