[package]
name = "coflow-data-model"
version = "0.6.3"
edition = "2021"
description = "Source-neutral Coflow data model built from compiled CFT schema."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "game-data", "data-model"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[features]
default = []
# Enable TypeScript binding export via `ts-rs`. Off by default so CLI / non-UI
# hosts don't pull in ts-rs. The cfd-editor crate flips this on for its
# `export_bindings` test.
ts-export = ["dep:ts-rs"]

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-structure = { path = "../coflow-structure" }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "10", optional = true }

[dev-dependencies]
serde_json = "1"
