[package]
name = "coflow-data-model"
version = "0.7.4"
edition = "2021"
description = "Source-neutral Coflow data model built from compiled CFT schema."
license = "Apache-2.0"
repository = "https://github.com/Puring103/coflow"
readme = "../../README.md"
keywords = ["config", "game-data", "data-model"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[features]
default = []
# Enable TypeScript binding export via `ts-rs`. Off by default so CLI / non-UI
# hosts don't pull in ts-rs. The cfd-editor crate flips this on for its
# `export_bindings` test.
ts-export = ["dep:ts-rs"]

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-structure = { path = "../coflow-structure" }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "10", optional = true }
unicode-ident = "1"

[dev-dependencies]
serde_json = "1"

[[bench]]
name = "schema_relationships"
harness = false
