[package]
name = "coflow-editor-core"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[package.metadata.ts-rs]
export-dir = "../../editors/cfd-editor/frontend/src/bindings"

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-cfd = { path = "../coflow-cfd" }
coflow-loader-cfd = { path = "../coflow-loader-cfd" }
coflow-data-model = { path = "../coflow-data-model" }
coflow-checker = { path = "../coflow-checker" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"
