[package]
name = "coflow-editor-core"
version = "0.1.0"
edition = "2021"
description = "Editor backend session/store for the CFD editor (Tauri)."
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
coflow-cfd = { path = "../coflow-cfd" }
coflow-loader-cfd = { path = "../coflow-loader-cfd" }
coflow-loader-excel = { path = "../coflow-loader-excel" }
coflow-loader-lark = { path = "../coflow-loader-lark" }
coflow-data-model = { path = "../coflow-data-model" }
coflow-checker = { path = "../coflow-checker" }
coflow-project = { path = "../coflow-project" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
