[package]
name = "coflow-exporter-core"
version = "0.7.4"
edition = "2021"
description = "Shared schema-guided exporter traversal for Coflow data models."
license = "Apache-2.0"
repository = "https://github.com/Puring103/coflow"
readme = "../../README.md"
keywords = ["config", "game-data", "export"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
