[package]
name = "coflow-json-export"
version = "0.1.0"
edition = "2021"
description = "JSON exporter for validated Coflow data models."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "game-data", "json"]
categories = ["config", "game-development"]
publish = false

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
serde_json = { version = "1", features = ["preserve_order"] }
