[package]
name = "coflow-loader-cfd"
version = "0.1.0"
edition = "2021"
description = "Text CFD loader for Coflow data models."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cfd = { path = "../coflow-cfd" }
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
