[package]
name = "coflow-loader-csv"
version = "0.7.0"
edition = "2021"
description = "CSV loader for Coflow data models."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "game-data", "csv"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
coflow-loader-table-core = { path = "../coflow-loader-table-core" }
serde_json = { version = "1", features = ["preserve_order"] }
