[package]
name = "coflow-loader-lark"
version = "0.6.3"
edition = "2021"
description = "Feishu/Lark Sheets loader for Coflow data models."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
readme = "../../README.md"
keywords = ["config", "game-data", "lark", "feishu"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
coflow-loader-table-core = { path = "../coflow-loader-table-core" }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
ureq = "2"
