[package]
name = "coflow-loader-table-core"
version = "0.7.4"
edition = "2021"
description = "Shared schema-guided table loading core for Coflow data sources."
license = "Apache-2.0"
repository = "https://github.com/Puring103/coflow"
readme = "../../README.md"
keywords = ["config", "game-data", "table"]
categories = ["config", "game-development"]
publish = false

[lints]
workspace = true

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-data-model = { path = "../coflow-data-model" }
serde_json = "1"
