[package]
name = "coflow-lsp"
version = "0.1.0"
edition = "2021"
description = "Language server implementation for Coflow CFT and CFD."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
coflow-cfd = { path = "../coflow-cfd" }
coflow-project = { path = "../coflow-project" }
serde_json = { version = "1", features = ["preserve_order"] }
