[package]
name = "coflow-lsp"
version = "0.6.2"
edition = "2021"
description = "Language server implementation for Coflow CFT and CFD."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[lints]
workspace = true

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
coflow-cfd = { path = "../coflow-cfd" }
coflow-project = { path = "../coflow-project" }
coflow-runtime = { path = "../coflow-runtime" }
serde_json = { version = "1", features = ["preserve_order"] }
