[package]
name = "coflow-pipeline"
version = "0.1.0"
edition = "2021"
description = "Project execution pipeline for Coflow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[lints]
workspace = true

[dependencies]
coflow-cft = { path = "../coflow-cft" }
coflow-loader-cfd = { path = "../coflow-loader-cfd" }
coflow-checker = { path = "../coflow-checker" }
coflow-codegen-csharp-json = { path = "../coflow-codegen-csharp-json" }
coflow-codegen-csharp-messagepack = { path = "../coflow-codegen-csharp-messagepack" }
coflow-exporter-json = { path = "../coflow-exporter-json" }
coflow-exporter-messagepack = { path = "../coflow-exporter-messagepack" }
coflow-data-model = { path = "../coflow-data-model" }
coflow-loader-excel = { path = "../coflow-loader-excel" }
coflow-project = { path = "../coflow-project" }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
rust_xlsxwriter = "0.64"
