[package]
name = "coflow-project"
version = "0.1.0"
edition = "2021"
description = "Project configuration and CFT schema compilation for Coflow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[dependencies]
coflow-cft = { path = "../coflow-cft" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
