[package]
name = "coflow-project"
version = "0.7.2"
edition = "2021"
description = "Project configuration, path resolution, and schema source discovery for Coflow."
license = "Apache-2.0"
repository = "https://github.com/wtlll/ScriptForGame"
publish = false

[lints]
workspace = true

[features]
default = []
ts-export = ["dep:ts-rs", "coflow-api/ts-export"]

[dependencies]
coflow-api = { path = "../coflow-api" }
coflow-cft = { path = "../coflow-cft" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
ts-rs = { version = "10", optional = true }
