[package]
name = "cfd-editor"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
coflow-editor-core = { path = "../../crates/coflow-editor-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
